bootstrap/tests/snapshots/parser_tests__ok_expressions_advanced.ast.snap
---
source: tests/parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "person"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "ObjectLiteral": [
                    [
                      "name",
                      {
                        "Literal": {
                          "String": "John"
                        }
                      }
                    ],
                    [
                      "age",
                      {
                        "Literal": {
                          "Int": 30
                        }
                      }
                    ],
                    [
                      "address",
                      {
                        "ObjectLiteral": [
                          [
                            "street",
                            {
                              "Literal": {
                                "String": "Main St"
                              }
                            }
                          ],
                          [
                            "city",
                            {
                              "Literal": {
                                "String": "Springfield"
                              }
                            }
                          ]
                        ]
                      }
                    ]
                  ]
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "mixed_array"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "ArrayLiteral": [
                    {
                      "Literal": {
                        "Int": 1
                      }
                    },
                    {
                      "Literal": {
                        "String": "hello"
                      }
                    },
                    {
                      "Literal": {
                        "Bool": true
                      }
                    },
                    {
                      "Literal": {
                        "Float": 3.14
                      }
                    }
                  ]
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "street"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Member": {
                    "object": {
                      "Member": {
                        "object": {
                          "Identifier": "person"
                        },
                        "property": "address"
                      }
                    },
                    "property": "street"
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "name"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Member": {
                    "object": {
                      "Identifier": "person"
                    },
                    "property": "name"
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "age"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Member": {
                    "object": {
                      "Identifier": "person"
                    },
                    "property": "age"
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "numbers"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "ArrayLiteral": [
                    {
                      "Literal": {
                        "Int": 1
                      }
                    },
                    {
                      "Literal": {
                        "Int": 2
                      }
                    },
                    {
                      "Literal": {
                        "Int": 3
                      }
                    },
                    {
                      "Literal": {
                        "Int": 4
                      }
                    },
                    {
                      "Literal": {
                        "Int": 5
                      }
                    }
                  ]
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "first"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Index": {
                    "object": {
                      "Identifier": "numbers"
                    },
                    "index": {
                      "Literal": {
                        "Int": 0
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "last"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Index": {
                    "object": {
                      "Identifier": "numbers"
                    },
                    "index": {
                      "Binary": {
                        "op": "Sub",
                        "left": {
                          "Member": {
                            "object": {
                              "Identifier": "numbers"
                            },
                            "property": "length"
                          }
                        },
                        "right": {
                          "Literal": {
                            "Int": 1
                          }
                        }
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "complex"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Div",
                    "left": {
                      "Binary": {
                        "op": "Sub",
                        "left": {
                          "Binary": {
                            "op": "Mul",
                            "left": {
                              "Binary": {
                                "op": "Add",
                                "left": {
                                  "Literal": {
                                    "Int": 1
                                  }
                                },
                                "right": {
                                  "Literal": {
                                    "Int": 2
                                  }
                                }
                              }
                            },
                            "right": {
                              "Literal": {
                                "Int": 3
                              }
                            }
                          }
                        },
                        "right": {
                          "Literal": {
                            "Int": 4
                          }
                        }
                      }
                    },
                    "right": {
                      "Binary": {
                        "op": "Add",
                        "left": {
                          "Literal": {
                            "Int": 5
                          }
                        },
                        "right": {
                          "Literal": {
                            "Int": 6
                          }
                        }
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "logical"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Binary": {
                    "op": "Or",
                    "left": {
                      "Binary": {
                        "op": "And",
                        "left": {
                          "Literal": {
                            "Bool": true
                          }
                        },
                        "right": {
                          "Literal": {
                            "Bool": false
                          }
                        }
                      }
                    },
                    "right": {
                      "Unary": {
                        "op": "Not",
                        "operand": {
                          "Binary": {
                            "op": "Gt",
                            "left": {
                              "Literal": {
                                "Int": 1
                              }
                            },
                            "right": {
                              "Literal": {
                                "Int": 2
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "message"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "StringTemplate": {
                    "parts": [
                      {
                        "Text": "Hello "
                      },
                      {
                        "Expr": {
                          "Member": {
                            "object": {
                              "Identifier": "person"
                            },
                            "property": "name"
                          }
                        }
                      },
                      {
                        "Text": "! You live at "
                      },
                      {
                        "Expr": {
                          "Member": {
                            "object": {
                              "Member": {
                                "object": {
                                  "Identifier": "person"
                                },
                                "property": "address"
                              }
                            },
                            "property": "street"
                          }
                        }
                      },
                      {
                        "Text": ", "
                      },
                      {
                        "Expr": {
                          "Member": {
                            "object": {
                              "Member": {
                                "object": {
                                  "Identifier": "person"
                                },
                                "property": "address"
                              }
                            },
                            "property": "city"
                          }
                        }
                      },
                      {
                        "Text": ". Age: "
                      },
                      {
                        "Expr": {
                          "Member": {
                            "object": {
                              "Identifier": "person"
                            },
                            "property": "age"
                          }
                        }
                      }
                    ]
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "StringTemplate": {
                          "parts": [
                            {
                              "Text": "Complex expression result: "
                            },
                            {
                              "Expr": {
                                "Identifier": "complex"
                              }
                            }
                          ]
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "StringTemplate": {
                          "parts": [
                            {
                              "Text": "Logical expression result: "
                            },
                            {
                              "Expr": {
                                "Identifier": "logical"
                              }
                            }
                          ]
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "StringTemplate": {
                          "parts": [
                            {
                              "Text": "Message: "
                            },
                            {
                              "Expr": {
                                "Identifier": "message"
                              }
                            }
                          ]
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            },
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "StringTemplate": {
                          "parts": [
                            {
                              "Text": "Array operations: first="
                            },
                            {
                              "Expr": {
                                "Identifier": "first"
                              }
                            },
                            {
                              "Text": ", last="
                            },
                            {
                              "Expr": {
                                "Identifier": "last"
                              }
                            }
                          ]
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
