bootstrap/tests/snapshots/parser_tests__ok_imports.ast.snap
---
source: tests/parser_tests.rs
assertion_line: 17
expression: json
---
{
  "items": [
    {
      "Import": {
        "imports": [
          "add",
          "multiply"
        ],
        "source": "./math",
        "is_wildcard": false,
        "alias": null
      }
    },
    {
      "Import": {
        "imports": [],
        "source": "./utils",
        "is_wildcard": true,
        "alias": "utils"
      }
    },
    {
      "Import": {
        "imports": [
          "Server"
        ],
        "source": "http",
        "is_wildcard": false,
        "alias": null
      }
    },
    {
      "UseRust": {
        "crate_name": "serde",
        "alias": null,
        "version": "1.0"
      }
    },
    {
      "UseRust": {
        "crate_name": "tokio",
        "alias": null,
        "features": [
          "macros",
          "rt"
        ]
      }
    },
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "Expr": {
                "expr": {
                  "Call": {
                    "callee": {
                      "Identifier": "print"
                    },
                    "args": [
                      {
                        "Literal": {
                          "String": "Using imports"
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
